Clarify README, refer to MIT license only.

--- a/README.rdoc
+++ b/README.rdoc
@@ -16,5 +16,4 @@ Florian Frank mailto:flori@ping.de
 
 == License
 
-This software is licensed under the X11 (or MIT) license:
-http://www.xfree86.org/3.3.6/COPYRIGHT2.html#3
+This software is licensed under the MIT (Expat) license.
